# Influxify

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
src/influxify/: __init__.py  main.py
src/influxify.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_csv_to_lineprotocol.py
