[project]
name = influxify
version = 0.0.1
authors = Uzma Langde
author_email = uzmasaajid@gmail.com 
description = A package that can be used to convert csv file to influxdb line protocol format.
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",]
[project.urls]
"Homepage" = "https://github.com/saniauzma/Influxify"
"Bug Tracker" = "https://github.com/saniauzma/Influxify/issues"


