[metadata]
name = influxify
version = 0.0.3
authors = Uzma Langde
author_email = uzmasaajid@gmail.com 
description = A package that can be used to convert csv file to influxdb line protocol format.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saniauzma/Influxify

readme = README.md
license = MIT License
license_files = LICENSE
requires-python = >=3.7
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source Code = https://github.com/saniauzma/Influxify
    Bug Tracker = https://github.com/saniauzma/Influxify/issues


